<?xml version="1.0"?>
<package>
  <name>planning_controls_modules</name>
  <version>0.0.1</version>
  <description>Modules for planning and controls software stack</description>
  <maintainer email="samxchandler@protoinnovations.com">Sam Chandler</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rover_msgs</build_depend>
  <build_depend>rover_modules</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rover_msgs</run_depend>
  <run_depend>rover_modules</run_depend>

  <export>

  </export>
</package>
