<?xml version="1.0"?>
<package>
  <name>rover_modules</name>
  <version>0.0.1</version>
  <description>Custom libraries for rovers</description>
  <maintainer email="samxchandler@protoinnovations.com">Sam Chandler</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
